# aumai-toolemu

./: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: api-reference.md  getting-started.md
examples/: quickstart.py
src/aumai_toolemu/: __init__.py  cli.py  core.py  models.py
tests/: conftest.py  test_cli.py  test_core.py
